@@ -3,8 +3,7 @@ LTL3 Tools NEWS
 
 [under development:]                    LTL3 tools 0.0.4
 
-- Final states of the monitor are now merged into one, respectively,
-  resulting in smaller monitors
+- Added -m option to fsmcrossprod in order to minimise monitor FSM
 
 - Fixed a bug in nevertofsm which could lead to AT&T's fsmlibrary's reject
   of the generated automaton; that is, states can no longer have a trailing
